welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def point() {
  baisseBrosse()
  leveBrosse()
}

def faireV() {
  avance()
	avance()
  point()
  avance()
  gauche()
  point()
  recule()
  droite()
  avance()
  point()
  avance()
  avance()
  gauche()
}

override run() { 
  for (i <- 1 to 4) {
  faireV()
	}
}

